@@ -76,12 +76,17 @@ function addInputField($sType, $aAttribs=array()) {
  * Password input field
  * @param string $sName field name
  * @param string $sValue initial password value
- * @param array $aAttribs (since 1.5.1) extra attributes
- * @return string html formated password field
+ * @param integer $iSize field size (number of characters)
+ * @param integer $iMaxlength maximum number of characters the user may enter
+ * @param array $aAttribs (since 1.5.1) extra attributes - should be given
+ *                        in the form array('attribute_name' => 'attribute_value', ...)
+ * @return string html formated password field 
  */
-function addPwField($sName, $sValue = null, $aAttribs=array()) {
+function addPwField($sName, $sValue = '', $iSize = 0, $iMaxlength = 0, $aAttribs=array()) {
     $aAttribs['name']  = $sName;
-    $aAttribs['value'] = (! is_null($sValue) ? $sValue : '');
+    $aAttribs['value'] = $sValue;
+    if ($iSize) $aAttribs['size'] = (int)$iSize;
+    if ($iMaxlength) $aAttribs['maxlength'] = (int)$iMaxlength;
     // add default css
     if (! isset($aAttribs['class'])) $aAttribs['class'] = 'sqmpwfield';
     return addInputField('password',$aAttribs);
